<resources>
    <string name="app_name">TexiCar_app</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password_">Password*</string>
    <string name="sign_in_text">SING IN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="terms_and_c">Terms and Conditions | Privacy Policy</string>
    <string name="sign_in_to_">Sign In To Continue</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_id_">Email ID*</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>