<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taxicar_app.signUp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LOG-IN UI -->
        <RelativeLayout
            android:id="@+id/log_in_ui"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/log_in_ui"
            android:clipToOutline="true"
            android:visibility="gone" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Sing in button -->
                <View
                    android:id="@+id/sign_in_but"
                    android:layout_width="356dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="548dp"
                    android:background="@drawable/sign_up_but"
                    android:elevation="4dp"
                    android:foregroundGravity="bottom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- SIGN UP Button -->
                <View
                    android:id="@+id/sign_up_but"
                    android:layout_width="122dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="262dp"
                    android:layout_marginTop="47dp"
                    android:background="@drawable/sign_up_button"
                    android:elevation="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Password Text -->
                <View
                    android:id="@+id/password_te"
                    android:layout_width="356dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="479dp"
                    android:background="@drawable/password_text"
                    android:elevation="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Email ID Text -->
                <View
                    android:id="@+id/email_id_te"
                    android:layout_width="356dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="389dp"
                    android:background="@drawable/email_id_text"
                    android:elevation="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- UI Header Design -->
                <View
                    android:id="@+id/ui_header_d"
                    android:layout_width="428dp"
                    android:layout_height="235dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="-24dp"
                    android:background="@drawable/ui_header_design"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- UI Footer Design -->
                <View
                    android:id="@+id/ui_footer_d"
                    android:layout_width="428dp"
                    android:layout_height="265dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/ui_footer_design"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <!-- Line 1 -->
                <View
                    android:id="@+id/line_1"
                    android:layout_width="179dp"
                    android:layout_height="3dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="332.45dp"
                    android:background="@drawable/line_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Line 2 -->
                <View
                    android:id="@+id/line_2"
                    android:layout_width="179dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="332.45dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/line_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>


        <!-- Password* -->
        <TextView
            android:id="@+id/password_"
            android:layout_width="112dp"
            android:layout_height="25dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="446dp"
            android:gravity="center_horizontal|top"
            android:text="@string/password_"
            android:textAppearance="@style/password_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- OR -->
        <TextView
            android:id="@+id/or"
            android:layout_width="37dp"
            android:layout_height="28dp"
            android:layout_marginStart="195dp"
            android:layout_marginTop="320dp"
            android:gravity="center_horizontal|top"
            android:text="@string/or"
            android:textAppearance="@style/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Terms and Conditions | Privacy Policy -->
        <TextView
            android:id="@+id/terms_and_c"
            android:layout_width="208dp"
            android:layout_height="45dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="588dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/terms_and_c"
            android:textAppearance="@style/terms_and_c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Sign In To Continue -->
        <TextView
            android:id="@+id/sign_in_to_"
            android:layout_width="305dp"
            android:layout_height="85dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="67dp"
            android:layout_marginTop="187dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_in_to_"
            android:textAppearance="@style/sign_in_to_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- SIGN UP -->
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="88dp"
            android:layout_height="23dp"
            android:layout_marginStart="279dp"
            android:layout_marginTop="56dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Email ID* -->
        <TextView
            android:id="@+id/email_id_"
            android:layout_width="96dp"
            android:layout_height="27dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="354dp"
            android:gravity="center_horizontal|top"
            android:text="@string/email_id_"
            android:textAppearance="@style/email_id_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- SIGN IN Text -->
        <TextView
            android:id="@+id/sign_in_tex"
            android:layout_width="90dp"
            android:layout_height="27dp"
            android:layout_marginStart="169dp"
            android:layout_marginTop="552dp"
            android:gravity="center_horizontal|top"
            android:text="@string/sign_in_text"
            android:textAppearance="@style/sign_in_tex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="133dp"
            android:layout_height="25dp"
            android:layout_marginStart="232dp"
            android:layout_marginTop="446dp"
            android:gravity="center_horizontal|top"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/twitter"
            android:layout_width="26.82dp"
            android:layout_height="25.79dp"
            android:layout_marginStart="331dp"
            android:layout_marginTop="277dp"
            android:background="@drawable/twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/facebook_ic"
            android:layout_width="27dp"
            android:layout_height="26dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="277dp"
            android:background="@drawable/facebook_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/google_icon"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="277dp"
            android:background="@drawable/google_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""

            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/sign_in_text"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        -->

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>